force-app/main/default/objects/SVMXA360__PSCEngineLog__c/SVMXA360__PSCEngineLog__c.object-meta.xml
<CustomObject>
    <description>PSC Engine Log object is a repository for storing Batch information and associated logs for the processes utilized in the PSC module. This includes processing of PSC Search and processing of Output Generation.</description>
    <label>PSC Engine Log</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSC Engine Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>