force-app/main/default/objects/SVMXA360__PSCEngineLog__c/fields/SVMXA360__BatchId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__BatchId__c</fullName>
    <description>This field is used to store the batch id to track the status of the Batch job.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Batch Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>