force-app/main/default/objects/SVMXA360__PSCEngineLog__c/fields/SVMXA360__CompletedOn__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__CompletedOn__c</fullName>
    <description>This field is used to capture the completion time of the Batch job.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Completed On</label>
    <type>DateTime</type>
</CustomField>