force-app/main/default/objects/SVMXA360__PSCEngineLog__c/fields/SVMXA360__LogDetails__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__LogDetails__c</fullName>
    <description>This field is used to capture the log details of the Batch job.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Log Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>