force-app/main/default/objects/SVMXA360__PSCEngineLog__c/fields/SVMXA360__LogType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__LogType__c</fullName>
    <description>This field is used to indicate the type of generated log.</description>
    <label>Log Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PSCIGeneration</fullName>
                <label>PSCI Generation</label>
            </value>
            <value>
                <fullName>OutputGeneration</fullName>
                <label>Output Generation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>