force-app/main/default/objects/SVMXA360__PSCEngineLog__c/fields/SVMXA360__ProductServiceCampaignId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ProductServiceCampaignId__c</fullName>
    <description>This field is used to associate the PSC Engine Log with the Product Service Campaign.</description>
    <label>Product Service Campaign</label>
    <referenceTo>ProductServiceCampaign</referenceTo>
    <relationshipLabel>PSC Engine Logs</relationshipLabel>
    <relationshipName>PSC_Engine_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>