force-app/main/default/objects/SVMXA360__PSCEngineLog__c/fields/SVMXA360__StartedOn__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__StartedOn__c</fullName>
    <description>This field is used to capture the start time of the Batch job.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Started On</label>
    <type>DateTime</type>
</CustomField>